--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -18,6 +18,6 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: engineering-productivity
+  owner: team-a
   definition:
       $text: https://github.com/danludwig-happymoney/testBack-2/blob/main/swagger.yaml
